--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="paddle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h">
@@ -38,5 +41,13 @@
     <ClInclude Include="Paddle.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Ui.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="GALS.ttf">
+      <Filter>Source Files</Filter>
+    </Font>
   </ItemGroup>
 </Project>
