feat: Add score and change font

--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="GALS.ttf" />
+    <Font Include="JustMyType-KePl.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
