--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
@@ -49,5 +49,8 @@
     <Font Include="GALS.ttf">
       <Filter>Source Files</Filter>
     </Font>
+    <Font Include="JustMyType-KePl.ttf">
+      <Filter>Source Files</Filter>
+    </Font>
   </ItemGroup>
 </Project>
