--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -164,6 +164,9 @@
   <ItemGroup>
     <Font Include="JustMyType-KePl.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="bg.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
