--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -167,6 +167,10 @@
   <ItemGroup>
     <Image Include="bg.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Media Include="bouncePaddle.wav" />
+    <Media Include="bounceWall.wav" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
