feat: Add blackhole

--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -150,6 +150,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ball.cpp" />
+    <ClCompile Include="blackhole.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="paddle.cpp" />
     <ClCompile Include="powerup.cpp" />
@@ -158,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="Blackhole.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Powerup.h" />
     <ClInclude Include="Setting.h" />
