--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="powerup.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="blackhole.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h">
@@ -48,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
     <ClInclude Include="Powerup.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Blackhole.h">
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
