feat: Add sound for powerup and fail

--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
@@ -74,5 +74,11 @@
     <Media Include="bounceWall.wav">
       <Filter>Source Files</Filter>
     </Media>
+    <Media Include="fail.wav">
+      <Filter>Source Files</Filter>
+    </Media>
+    <Media Include="powerup.wav">
+      <Filter>Source Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
