--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -174,6 +174,8 @@
   <ItemGroup>
     <Media Include="bouncePaddle.wav" />
     <Media Include="bounceWall.wav" />
+    <Media Include="fail.wav" />
+    <Media Include="powerup.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
