feat: Add sound for win

--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj
@@ -176,6 +176,7 @@
     <Media Include="bounceWall.wav" />
     <Media Include="fail.wav" />
     <Media Include="powerup.wav" />
+    <Media Include="win.wav" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
