--- a/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
+++ b/GAME230-P2-Pong/GAME230-P2-Pong.vcxproj.filters
@@ -80,5 +80,8 @@
     <Media Include="powerup.wav">
       <Filter>Source Files</Filter>
     </Media>
+    <Media Include="win.wav">
+      <Filter>Source Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
